Kubernates/ingress/nginx-health-slow.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-health
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-health
  template:
    metadata:
      labels:
        app: nginx-health
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80

        readinessProbe:
          httpGet:
          path: /
          port: 80
        initialDelaySeconds: 10
        periodSeconds: 10
        timeoutSeconds: 5
        failureThreshold: 10

        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 10
